examples/invalid/program7.c
int main() {
    while (x < 10 {
        x = x + 1;
    }
    return x;
}

